# csv-arm-fpgrowth

./: .gitignore  README.md  main.py  pyproject.toml
src/csv_arm_fpgrowth/: __init__.py  core.py
tests/: test_hello.py
tests/data/: test.csv
