[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-arm-fpgrowth"
version = "0.1.2"
description = "CSV to ARM via FP-Growth with memory profiling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5.0",
    "mlxtend>=0.3.0"
]
authors = [
  {name = "Pavel Soshenko"},
  {name = "Nazarii Konechnyi"},
  {name = "Yurii Sahatelian"},
  {name = "Illia Balan"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1", 
    "black>=23.10",
    "mypy>=1.6",
    "pre-commit>=3.6",
    "ruff>=0.1"
]

[project.urls]
Homepage = "https://github.com/NazariiKon/csv-arm-fpgrowth"
Repository = "https://github.com/NazariiKon/csv-arm-fpgrowth"
